--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>
         Puls4: Comunidad para gente atractiva y millonaria
     </title>
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/puls4.css" />
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div class="logo left">
             <img src="imagenes/logo.png" alt="Puls4"/>
         </div>
         <div class="titular">
@@ -17,7 +21,7 @@
             </h1>
             <div>
                 <a class="filtro" href="#">
-                    Reponsive Design
+                    Stylus
                 </a>
                 <a class="publicar" href="#">
                     Publicar
@@ -39,7 +43,11 @@
             <li><a href="#">HTML5</a></li>
             <li><a href="#">Javascript</a></li>
             <li><a href="#">Django</a></li>
+            <li><a href="#">CSS3</a></li>
             <li><a href="#">Python</a></li>
+            <li><a href="#">HTML5</a></li>
+            <li><a href="#">Javascript</a></li>
+            <li><a href="#">Django</a></li>
             <li><a href="#">CSS3</a></li>
         </ul>
     </nav>
@@ -51,23 +59,23 @@
                 </figure>
                 <div class="detalles">
                     <h2 class="titulo">
-                        Modulo de usuarios (V): Lista y paginacion con Laravel
+                        Colores, gradientes y texto 3D con Sass y Compass
                     </h2>
                     <p class="autor">
-                        por <a href="#">Duilio Sanchez</a>
+                        por <a href="#">Diana Reyes</a>
                     </p>
-                    <a class="tag" href="#">PHP</a>
+                    <a class="tag" href="#">CSS3</a>
                     <p class="fecha">hace <strong>20</strong> min</p>
                 </div>
             </div>
             <div class="acciones">
                 <div class="votos">
                     <a class="up" href="#">U</a>
-                    <span class="total">155</span>
+                    <span class="total">156</span>
                     <a class="down" href="#">D</a>
                 </div>
                 <div class="datos">
-                    <a class="comentarios">
+                    <a class="comentarios" href="#">
                         10
                     </a>
                     <a class="estrellita" href="#">*</a>
@@ -77,7 +85,7 @@
     </section>
     <footer>
         <h3 class="powered">
-            <strong>Powered vy Platzi</strong>
+            <strong>Powered by Platzi</strong>
             <span class="mejor">
                 mejorando.la 2013
             </span>
